[package]
name = "bls_bench"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "perf_msm"
harness = false

[[bench]]
name = "perf_bitfield"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blstrs = "0.6.1"
criterion = { version = "0.4.0", features = ["html_reports"] }
group = "0.12.0"
rand = "0.8.5"
